--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>demoApp</display-name>
+  <display-name>damoApp</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <filter>
+    <display-name>CheckPasswordFilter</display-name>
+    <filter-name>CheckPasswordFilter</filter-name>
+    <filter-class>web.CheckPasswordFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>CheckPasswordFilter</filter-name>
+    <url-pattern>/RegistrationServlet</url-pattern>
+  </filter-mapping>
 </web-app>
